Fix mobile nav on mobile viewing

--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -3,4 +3,13 @@ html, body, * {
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+
+  // This is supposed to cater for
+  // working around the mobile native nav
+  @media (max-width: 600px) {
+    #masthead .top-strip { position:relative; }
+  }
+  @media (min-width: 601px) {
+    #masthead #branding { margin: 90px auto 10px !important; }
+  }
 }
